--- a/.gitmodules
+++ b/.gitmodules
@@ -1,61 +1,54 @@
 [submodule "server/msl-server-common"]
 	path = server/msl-server-common
-	url = git@github.com:kenzanmedia/msl-server-common.git
-
+	url = http://github.com/kenzanlabs/msl-server-common.git
 [submodule "server/msl-zuul"]
 	path = server/msl-zuul
-	url = git@github.com:kenzanlabs/msl-zuul.git
-
+	url = http://github.com/kenzanlabs/msl-zuul.git
 [submodule "server/msl-catalog-edge"]
 	path = server/msl-catalog-edge
-	url = git@github.com:kenzanlabs/msl-catalog-edge.git
+	url = http://github.com/kenzanlabs/msl-catalog-edge.git
 [submodule "server/msl-account-edge"]
 	path = server/msl-account-edge
-	url = git@github.com:kenzanlabs/msl-account-edge.git
+	url = http://github.com/kenzanlabs/msl-account-edge.git
 [submodule "server/msl-login-edge"]
 	path = server/msl-login-edge
-	url = git@github.com:kenzanlabs/msl-login-edge.git
+	url = http://github.com/kenzanlabs/msl-login-edge.git
 [submodule "server/msl-ratings-edge"]
 	path = server/msl-ratings-edge
-	url = git@github.com:kenzanlabs/msl-ratings-edge.git
-
+	url = http://github.com/kenzanlabs/msl-ratings-edge.git
 [submodule "server/msl-catalog-edge-config"]
 	path = server/msl-catalog-edge-config
-	url = git@github.com:kenzanlabs/msl-catalog-edge-config.git
+	url = http://github.com/kenzanlabs/msl-catalog-edge-config.git
 [submodule "server/msl-account-edge-config"]
 	path = server/msl-account-edge-config
-	url = git@github.com:kenzanlabs/msl-account-edge-config.git
+	url = http://github.com/kenzanlabs/msl-account-edge-config.git
 [submodule "server/msl-login-edge-config"]
 	path = server/msl-login-edge-config
-	url = git@github.com:kenzanlabs/msl-login-edge-config.git
+	url = http://github.com/kenzanlabs/msl-login-edge-config.git
 [submodule "server/msl-ratings-edge-config"]
 	path = server/msl-ratings-edge-config
-	url = git@github.com:kenzanlabs/msl-ratings-edge-config.git
-
+	url = http://github.com/kenzanlabs/msl-ratings-edge-config.git
 [submodule "server/msl-catalog-data-client"]
 	path = server/msl-catalog-data-client
-	url = git@github.com:kenzanlabs/msl-catalog-data-client.git
+	url = http://github.com/kenzanlabs/msl-catalog-data-client.git
 [submodule "server/msl-account-data-client"]
 	path = server/msl-account-data-client
-	url = git@github.com:kenzanlabs/msl-account-data-client.git
+	url = http://github.com/kenzanlabs/msl-account-data-client.git
 [submodule "server/msl-ratings-data-client"]
 	path = server/msl-ratings-data-client
-	url = git@github.com:kenzanlabs/msl-ratings-data-client.git
-
+	url = http://github.com/kenzanlabs/msl-ratings-data-client.git
 [submodule "server/msl-catalog-data-client-config"]
-  path = server/msl-catalog-data-client-config
-  url = git@github.com:kenzanlabs/msl-catalog-data-client-config.git
+	path = server/msl-catalog-data-client-config
+	url = http://github.com/kenzanlabs/msl-catalog-data-client-config.git
 [submodule "server/msl-account-data-client-config"]
 	path = server/msl-account-data-client-config
-	url = git@github.com:kenzanlabs/msl-account-data-client-config.git
+	url = http://github.com/kenzanlabs/msl-account-data-client-config.git
 [submodule "server/msl-ratings-data-client-config"]
 	path = server/msl-ratings-data-client-config
-	url = git@github.com:kenzanlabs/msl-ratings-data-client-config.git
-
+	url = http://github.com/kenzanlabs/msl-ratings-data-client-config.git
 [submodule "msl-pages"]
 	path = msl-pages
-	url = git@github.com:kenzanlabs/msl-pages.git
-
+	url = http://github.com/kenzanlabs/msl-pages.git
 [submodule "server/styleguide"]
 	path = server/styleguide
-	url = https://github.com/kenzanlabs/styleguide.git
+	url = http://github.com/kenzanlabs/styleguide.git
